// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`CoverArt renders loading state 1`] = `
<DocumentFragment>
  <div
    class="w-full max-w-[400px] aspect-square"
  >
    <img
      alt="Cover Art"
      class="w-full h-full object-cover"
      src="test-file-stub"
    />
  </div>
</DocumentFragment>
`;

exports[`CoverArt renders non-loading state 1`] = `
<DocumentFragment>
  <div
    class="w-full max-w-[400px] aspect-square"
  >
    <img
      alt="Cover Art"
      class="w-full h-full object-cover"
    />
  </div>
</DocumentFragment>
`;
